finalization of project and completion of project previews

--- a/views/pages/arboresque.html
+++ b/views/pages/arboresque.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LBELIB | Pierre Avestruz Potfolio</title>
+    <title>Arboresque | Pierre Avestruz Potfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link rel="icon" type="image" href="/public/img/personal-logo-portfolio.png" />
     <link rel="stylesheet" href="/public/css/project-preview.css" />
@@ -57,14 +57,11 @@
           <div class="p-5 lg:p-12 lg:pb-2">
             <!-- Project Title -->
             <div class="mb-6">
-              <h1 class="text-4xl lg:text-5xl font-bold mb-5 text-center">Lawang Bato National Highschool <span class="text-cyan">E-Library</span></h1>
-              <p class="text-xl text-gray-300 mb-2 text-center">Online Library and Research Repository</p>
+              <h1 class="text-4xl lg:text-5xl font-bold mb-5 text-center">Arbor<span class="text-cyan">esque</span></h1>
+              <p class="text-xl text-gray-300 mb-2 text-center">RPG Novel Game</p>
               <div class="flex flex-wrap gap-2 mb-5 justify-center">
-                <span class="bg-orange-500/20 text-orange-400 px-2 py-1 rounded text-sm">HTML/CSS</span>
-                <span class="bg-yellow-500/20 text-yellow-400 px-2 py-1 rounded text-sm">JavaScript</span>
-                <span class="bg-purple-500/20 text-purple-400 px-2 py-1 rounded text-sm">Bootstrap</span>
-                <span class="bg-green-600/20 text-green-500 px-2 py-1 rounded text-sm">Django</span>
-                <span class="bg-green-400/20 text-green-300 px-2 py-1 rounded text-sm">SQL</span>
+                <span class="bg-indigo-500/20 text-blue-400 px-2 py-1 rounded text-sm">Canva</span>
+                <span class="bg-zinc-500/20 text-zinc-300 px-2 py-1 rounded text-sm">Unity</span>
               </div>
             </div>
 
@@ -72,24 +69,27 @@
             <div class="grid grid-cols-2 gap-6 mb-8">
               <div>
                 <p class="text-gray-400 text-sm uppercase tracking-wide mb-1 text-center">Category</p>
-                <p class="text-white font-medium text-center">Web Application</p>
+                <p class="text-white font-medium text-center">Game Application</p>
               </div>
               <div>
                 <p class="text-gray-400 text-sm uppercase tracking-wide mb-1 text-center">Platform</p>
-                <p class="text-white font-medium text-center">Web & Mobile</p>
+                <p class="text-white font-medium text-center">PC</p>
               </div>
               <!-- Description -->
               <div class="mb-8 col-span-2">
-                <p class="text-gray-300 leading-relaxed text-justified mx-0 md:mx-10" >
-                  A concept proposed in fulfillment of our thesis, LBELIB is a web-based library system designed to modernize the traditional library experience. It provides
-                  a platform for students and teachers to access books, research materials, and other resources online, making it easier to find and borrow materials without
-                  the need for physical visits to the library.
+                <p class="text-gray-300 leading-relaxed text-justified mx-0 md:mx-10">
+                  Arboresque is a captivating RPG novel game that immerses players in a rich, interactive narrative. Set in a world where choices shape destinies, players
+                  embark on an epic journey filled with adventure, mystery, and strategic decision-making. With stunning visuals and an engaging storyline, Arboresque offers a
+                  unique gaming experience that combines the thrill of role-playing with the depth of storytelling.
                 </p>
               </div>
 
               <!-- Quick Stats -->
               <div class="text-sm text-gray-400 text-center col-span-2">
-                <p class="mb-1">For more details about the project and overall design, view below.</p>
+                <p class="mb-1">
+                  For full details about the project and overall design,
+                  <a class="text-cyan" href="https://drive.google.com/drive/folders/1xQURhwJiksNOgBstjysGLS7IcJDDWjsD?usp=sharing" target="_blank">click here!</a>
+                </p>
               </div>
             </div>
           </div>
@@ -116,13 +116,13 @@
                   <div class="carousel-container h-[500px] relative">
                     <!-- Carousel slides -->
                     <div class="carousel-slide active">
-                      <img src="/public/img/lbelib/student/home-page.png" alt="Website Page 1" class="w-full h-full object-cover" />
+                      <img src="/public/img/arboresque/arboresque.png" alt="Website Page 1" class="w-full h-full object-cover" />
                     </div>
                     <div class="carousel-slide">
-                      <img src="/public/img/lbelib/student/book-detail.png" alt="Website Page 2" class="w-full h-full object-cover" />
+                      <img src="/public/img/arboresque/arboresque-char-select.png" alt="Website Page 2" class="w-full h-full object-cover" />
                     </div>
                     <div class="carousel-slide">
-                      <img src="/public/img/lbelib/student/book-preview.png" alt="Website Page 3" class="w-full h-full object-cover" />
+                      <img src="/public/img/arboresque/arboresque-choose-story.png" alt="Website Page 3" class="w-full h-full object-cover" />
                     </div>
 
                     <!-- Carousel Navigation -->
@@ -152,43 +152,31 @@
 
         <!-- Project Gallery Section -->
         <div class="mt-12">
-          <h2 class="text-2xl font-bold mb-6 text-center">Project <span class="text-cyan">Gallery</span></h2>
+          <h2 class="text-2xl font-bold mb-6 text-center fade-in-up">Project <span class="text-cyan">Gallery</span></h2>
 
-          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 fade-in-up">
-            <!-- Gallery Item 1 - Main Menu -->
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <!-- Gallery Item 1 -->
             <div
               class="bg-dark-blue rounded-xl p-4 border border-gray-700 hover:border-cyan transition-all duration-300 hover:transform hover:scale-105 cursor-pointer fade-in-up-delay-1"
-              onclick="openModal('lbelibStudent')"
+              onclick="openModal('arboresque')"
             >
               <div class="bg-gradient-to-br from-cyan/20 to-light-cyan/10 rounded-lg h-32 flex items-center justify-center mb-3">
-                <i class="fa-solid fa-graduation-cap text-[40px]"></i>
+                <i class="fa-solid fa-gamepad text-[40px]"></i>
               </div>
-              <h3 class="text-sm font-semibold text-white text-center">Student</h3>
-              <p class="text-xs text-gray-400 text-center">Student's User UI</p>
+              <h3 class="text-sm font-semibold text-white text-center">Base Game</h3>
+              <p class="text-xs text-gray-400 text-center">The games basic concept</p>
             </div>
 
-            <!-- Gallery Item 2 - Dashboard -->
+            <!-- Gallery Item 2 -->
             <div
               class="bg-dark-blue rounded-xl p-4 border border-gray-700 hover:border-cyan transition-all duration-300 hover:transform hover:scale-105 cursor-pointer fade-in-up-delay-2"
-              onclick="openModal('lbelibLibrarian')"
+              onclick="openModal('arboresque_components')"
             >
               <div class="bg-gradient-to-br from-green-400/20 to-green-600/10 rounded-lg h-32 flex items-center justify-center mb-3">
-                <i class="fa-solid fa-book text-[40px]"></i>
+                <i class="fa-solid fa-dice text-[40px]"></i>
               </div>
-              <h3 class="text-sm font-semibold text-white text-center">Librarian</h3>
-              <p class="text-xs text-gray-400 text-center">Librarian's User UI</p>
-            </div>
-
-            <!-- Gallery Item 3 - Task Board -->
-            <div
-              class="bg-dark-blue rounded-xl p-4 border border-gray-700 hover:border-cyan transition-all duration-300 hover:transform hover:scale-105 cursor-pointer fade-in-up-delay-3"
-              onclick="openModal('lbelibAdmin')"
-            >
-              <div class="bg-gradient-to-br from-purple-400/20 to-purple-600/10 rounded-lg h-32 flex items-center justify-center mb-3">
-                <i class="fa-solid fa-user-tie text-[40px]"></i>
-              </div>
-              <h3 class="text-sm font-semibold text-white mb-1 text-center">Admin</h3>
-              <p class="text-xs text-gray-400 text-center">Admin's User UI</p>
+              <h3 class="text-sm font-semibold text-white text-center">Game Components</h3>
+              <p class="text-xs text-gray-400 text-center">A sneak peak of the game components used in the game</p>
             </div>
           </div>
         </div>
@@ -225,15 +213,15 @@
             class="bg-dark-blue rounded-xl p-8 hover:transform hover:scale-105 transition-all duration-300 border border-gray-700 hover:border-cyan flex flex-col items-center sm:items-start"
           >
             <div class="bg-cyan bg-opacity-20 w-16 h-16 rounded-lg flex items-center justify-center mb-6">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 fill-cyan" stroke="currentColor" viewBox="0 0 384 512">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 fill-cyan" stroke="currentColor" viewBox="0 0 512 512">
                 <path
-                  d="M297.2 248.9C311.6 228.3 320 203.2 320 176c0-70.7-57.3-128-128-128S64 105.3 64 176c0 27.2 8.4 52.3 22.8 72.9c3.7 5.3 8.1 11.3 12.8 17.7c0 0 0 0 0 0c12.9 17.7 28.3 38.9 39.8 59.8c10.4 19 15.7 38.8 18.3 57.5L109 384c-2.2-12-5.9-23.7-11.8-34.5c-9.9-18-22.2-34.9-34.5-51.8c0 0 0 0 0 0s0 0 0 0c-5.2-7.1-10.4-14.2-15.4-21.4C27.6 247.9 16 213.3 16 176C16 78.8 94.8 0 192 0s176 78.8 176 176c0 37.3-11.6 71.9-31.4 100.3c-5 7.2-10.2 14.3-15.4 21.4c0 0 0 0 0 0s0 0 0 0c-12.3 16.8-24.6 33.7-34.5 51.8c-5.9 10.8-9.6 22.5-11.8 34.5l-48.6 0c2.6-18.7 7.9-38.6 18.3-57.5c11.5-20.9 26.9-42.1 39.8-59.8c0 0 0 0 0 0s0 0 0 0s0 0 0 0c4.7-6.4 9-12.4 12.7-17.7zM192 128c-26.5 0-48 21.5-48 48c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-44.2 35.8-80 80-80c8.8 0 16 7.2 16 16s-7.2 16-16 16zm0 384c-44.2 0-80-35.8-80-80l0-16 160 0 0 16c0 44.2-35.8 80-80 80z"
+                  d="M184 0c30.9 0 56 25.1 56 56l0 400c0 30.9-25.1 56-56 56c-28.9 0-52.7-21.9-55.7-50.1c-5.2 1.4-10.7 2.1-16.3 2.1c-35.3 0-64-28.7-64-64c0-7.4 1.3-14.6 3.6-21.2C21.4 367.4 0 338.2 0 304c0-31.9 18.7-59.5 45.8-72.3C37.1 220.8 32 207 32 192c0-30.7 21.6-56.3 50.4-62.6C80.8 123.9 80 118 80 112c0-29.9 20.6-55.1 48.3-62.1C131.3 21.9 155.1 0 184 0zM328 0c28.9 0 52.6 21.9 55.7 49.9c27.8 7 48.3 32.1 48.3 62.1c0 6-.8 11.9-2.4 17.4c28.8 6.2 50.4 31.9 50.4 62.6c0 15-5.1 28.8-13.8 39.7C493.3 244.5 512 272.1 512 304c0 34.2-21.4 63.4-51.6 74.8c2.3 6.6 3.6 13.8 3.6 21.2c0 35.3-28.7 64-64 64c-5.6 0-11.1-.7-16.3-2.1c-3 28.2-26.8 50.1-55.7 50.1c-30.9 0-56-25.1-56-56l0-400c0-30.9 25.1-56 56-56z"
                 />
               </svg>
             </div>
-            <h3 class="text-xl font-semibold mb-4 justify-self-start">Innovative</h3>
+            <h3 class="text-xl font-semibold mb-4 justify-self-start">Original</h3>
             <p class="text-gray-400 leading-relaxed text-center sm:text-start">
-              Helping the school library to be modernized and helping with excess storage of paper documents.
+              An original novel rpg game that is made to be played by anyone and everyone. It is a game that is made to be played by all ages.
             </p>
           </div>
 
@@ -252,7 +240,7 @@
             </div>
             <h3 class="text-xl font-semibold mb-4">User Friendly</h3>
             <p class="text-gray-400 leading-relaxed text-center sm:text-start">
-              Made to be easy to navigate and have straight forward functions to help be user friendly to all ages.
+              A game with basic controls for straightforward gameplay and a likeable and childish art style to appeal all ages.
             </p>
           </div>
 
@@ -260,68 +248,15 @@
             class="bg-dark-blue rounded-xl p-8 hover:transform hover:scale-105 transition-all duration-300 border border-gray-700 hover:border-cyan flex flex-col items-center sm:items-start"
           >
             <div class="bg-cyan bg-opacity-20 w-16 h-16 rounded-lg flex items-center justify-center mb-6">
-              <svg class="w-8 h-8 text-cyan" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 fill-cyan" stroke="currentColor" viewBox="0 0 512 512">
                 <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
+                  d="M64 416L168.6 180.7c15.3-34.4 40.3-63.5 72-83.7l146.9-94c3-1.9 6.5-2.9 10-2.9C407.7 0 416 8.3 416 18.6l0 1.6c0 2.6-.5 5.1-1.4 7.5L354.8 176.9c-1.9 4.7-2.8 9.7-2.8 14.7c0 5.5 1.2 11 3.4 16.1L448 416l-207.1 0 11.8-35.4 40.4-13.5c6.5-2.2 10.9-8.3 10.9-15.2s-4.4-13-10.9-15.2l-40.4-13.5-13.5-40.4C237 276.4 230.9 272 224 272s-13 4.4-15.2 10.9l-13.5 40.4-40.4 13.5C148.4 339 144 345.1 144 352s4.4 13 10.9 15.2l40.4 13.5L207.1 416 64 416zM279.6 141.5c-1.1-3.3-4.1-5.5-7.6-5.5s-6.5 2.2-7.6 5.5l-6.7 20.2-20.2 6.7c-3.3 1.1-5.5 4.1-5.5 7.6s2.2 6.5 5.5 7.6l20.2 6.7 6.7 20.2c1.1 3.3 4.1 5.5 7.6 5.5s6.5-2.2 7.6-5.5l6.7-20.2 20.2-6.7c3.3-1.1 5.5-4.1 5.5-7.6s-2.2-6.5-5.5-7.6l-20.2-6.7-6.7-20.2zM32 448l448 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 512c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
                 />
               </svg>
             </div>
-            <h3 class="text-xl font-semibold mb-4">Smart Analytics</h3>
-            <p class="text-gray-400 leading-relaxed text-center sm:text-start">Comprehensive analytics dashboard with insights, performance metrics, and user interactions.</p>
-          </div>
-
-          <div
-            class="bg-dark-blue rounded-xl p-8 hover:transform hover:scale-105 transition-all duration-300 border border-gray-700 hover:border-cyan flex flex-col items-center sm:items-start"
-          >
-            <div class="bg-cyan bg-opacity-20 w-16 h-16 rounded-lg flex items-center justify-center mb-6">
-              <svg class="w-8 h-8 text-cyan" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
-                />
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold mb-4">Data Security</h3>
+            <h3 class="text-xl font-semibold mb-4">Creativity</h3>
             <p class="text-gray-400 leading-relaxed text-center sm:text-start">
-              All books are recorded and dated and researches have watermarks to prevent copyright, limited access, and only has limited time to view.
-            </p>
-          </div>
-
-          <div
-            class="bg-dark-blue rounded-xl p-8 hover:transform hover:scale-105 transition-all duration-300 border border-gray-700 hover:border-cyan flex flex-col items-center sm:items-start"
-          >
-            <div class="bg-cyan bg-opacity-20 w-16 h-16 rounded-lg flex items-center justify-center mb-6">
-              <svg class="w-8 h-8 text-cyan" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold mb-4">Mobile Responsive</h3>
-            <p class="text-gray-400 leading-relaxed text-center sm:text-start">
-              Responsive design optimized for mobile devices with native app-like experience across all platforms.
-            </p>
-          </div>
-
-          <div
-            class="bg-dark-blue rounded-xl p-8 hover:transform hover:scale-105 transition-all duration-300 border border-gray-700 hover:border-cyan flex flex-col items-center sm:items-start"
-          >
-            <div class="bg-cyan bg-opacity-20 w-16 h-16 rounded-lg flex items-center justify-center mb-6">
-              <svg class="w-8 h-8 text-cyan" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-                />
-              </svg>
-            </div>
-            <h3 class="text-xl font-semibold mb-4">PWD Accesibility</h3>
-            <p class="text-gray-400 leading-relaxed text-center sm:text-start">
-              Programed to have voice recognition controls and implemented text to speech to be PWD friendly.
+              A game that challenges you to bring out your creativity to imagine and solve your way through the game.
             </p>
           </div>
         </div>
